# python-lucidmotors

./: .gitignore  Makefile  README.md  grpc_fiddle.py  pyproject.toml  requests  requirements.txt  requirements_dev.txt  tox.ini
.github/workflows/: python-package.yml
examples/: ac_current_control.py  evcc_plugin.py  grpc_fiddle.py  test_all_actions.py  vehicle_info.py
lucidmotors/: __init__.py  const.py  exceptions.py  user.py  vehicle.py
mobilegateway/protos/: login_session.proto
proto/: charging_service.proto  login_session.proto  salesforce_service.proto  sentry_service.proto  subscription_service.proto  trip_service.proto  user_preferences_service.proto  user_profile_service.proto  vehicle_state_service.proto
tests/: test_validate_login_response.py
tests/data/login_response/: idle.json
