[tool.poetry]
name = "lucidmotors"
version = "0.1.0"
description = ""
authors = ["Nick Shipp <git@segbrk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.6"
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
