[tool.poetry]
name = "lucidmotors"
version = "0.1.2"
description = ""
authors = ["Nick Shipp <git@segbrk.com>", "Michael Borohovski <borski@owlpost.lol>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.5"
pydantic = "==1.10.12"

[tool.poetry.group.dev.dependencies]
rich = "^13.6.0"
mypy = "^1.3.0"
pytest = "^7.4.3"
pytest-cases = "^3.8.1"
black = "^23.11.0"
flake8 = "^6.1.0"
flake8-black = "^0.3.6"
pyjwt = "^2.8.0"
mypy-protobuf = "^3.5.0"
types-protobuf = "^4.24.0.4"
poetry-plugin-export = "^1.6.0"

[tool.black]
line-length = 88
skip-string-normalization = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
